@@ -1,3 +1,4 @@
+6/2/14 check in dependencies.json for 1.1.0-rc.1
 # 1.1.0-rc.1 6/2/14
 6/2/14 branch 1.1 created
 5/27/14 change 'imports' to 'modules' in comments
